#348 Replace effectful for loop with a stream